--- a/od_simple_js/README.adoc
+++ b/od_simple_js/README.adoc
@@ -16,7 +16,7 @@ Therefore only the modules _server_, _shared_ and _webapp_ are needed.
 `opendolphin-<version>.js` is downloaded automatically on the fly during the
 build process from https://bintray.com/opendolphin/resources/opendolphin/view#files[bintray].
 This way javascript resources can be used from our gradle build process
-just like use mavenrepository artifacts (usually jar files).
+just like mavenrepository artifacts (usually jar files).
 And this also means that we do not have to pollute our source repositories anymore with these artifacts.
 
 To be able to do this in your project you need to apply some changes to your `build.gradle` file:
