--- a/od_simple_js_webjar/README.adoc
+++ b/od_simple_js_webjar/README.adoc
@@ -13,10 +13,17 @@ Therefore only the modules _server_, _shared_ and _webapp_ are needed.
 
 == opendolphin.js as artifact
 
-`opendolphin-<version>.js` is used via webjar (see dependency in build.gradle: compile 'org.open-dolphin:client-javascript:0.12.0B2')
+`opendolphin.js` is used via webjar (see dependency in build.gradle: `compile 'org.open-dolphin:client-javascript:0.12.0B2'`)
 This way javascript resources can be used from our gradle build process
 just like mavenrepository artifacts (usually jar files).
 And this also means that we do not have to pollute our source repositories anymore with these artifacts.
+
+From HTML you refer to `opendolphin.js` like this:
+
+[source,html]
+----
+<script type="text/javascript" src="webjars/org/opendolphin/0.12.0B2/opendolphin.js"></script>
+----
 
 BTW: bootstrap is used via webjar as well.
 
